--- a/components/product-card.html
+++ b/components/product-card.html
@@ -3,10 +3,10 @@
 
     <div class="absolute left-[10px] top-[10px] w-[calc(100%-16px)] flex-jsb-s gap-2 z-10">
       <div class="flex justify-start items-start flex-col gap-2">
-        <div class="py-[4px] px-[10px] bg-[#FB2FBE] rounded-[8px] text-[13px] font-bold
+        <div class="py-[4px] px-[10px] bg-[#FB2FBE] rounded-[8px] text-[11px] sm:text-[13px] font-bold
                  text-[white]">Рассрочка 0-0-24
         </div>
-        <div class="py-[4px] px-[10px] bg-[#16B34B] rounded-[8px] text-[13px] font-bold
+        <div class="py-[4px] px-[10px] bg-[#16B34B] rounded-[8px] text-[11px] sm:text-[13px] font-bold
                   text-[white]">-36%
         </div>
       </div>
@@ -23,14 +23,14 @@
 
     <div class="swiper swiperProductItems h-full relative">
       <div class="swiper-wrapper">
-        <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
+        <div class="swiper-slide flex-jc-c overflow-hidden rounded-[16px]">
+          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
         </div>
-        <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
+        <div class="swiper-slide flex-jc-c">
+          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
         </div>
-        <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
+        <div class="swiper-slide flex-jc-c">
+          <img src="img/products/_products.png" alt="product1" class="w-full h-full object-cover">
         </div>
       </div>
       <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
@@ -70,9 +70,9 @@
     <div class="flex-jsb-c mt-2">
       <h4 class="text-[20px] font-semibold hidden md:block">3 200 ₽</h4>
       <button
-          class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+          class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 max-[400px]:px-[10px]!">
         <span class="hidden sm:inline-block text-white text-[14px]">В корзину</span>
-        <img src="img/icons/basket-white.svg" alt="">
+        <img src="img/icons/basket-white.svg" alt="" width="20" height="20" class="min-w-[20px] min-h-[20px]">
       </button>
 
 
