--- a/css/output.css
+++ b/css/output.css
@@ -32,7 +32,7 @@ a {
 }
 
 .container {
-  max-width: 1200px !important;
+  max-width: 1400px !important;
   margin: 0 auto;
 }
 
@@ -1249,6 +1249,10 @@ select{
   visibility: hidden;
 }
 
+.collapse{
+  visibility: collapse;
+}
+
 .static{
   position: static;
 }
@@ -1275,10 +1279,6 @@ select{
 
 .\!bottom-6{
   bottom: 1.5rem !important;
-}
-
-.\!top-\[5px\]{
-  top: 5px !important;
 }
 
 .bottom-0{
@@ -1361,10 +1361,6 @@ select{
   right: 0;
 }
 
-.right-\[10px\]{
-  right: 10px;
-}
-
 .right-\[12px\]{
   right: 12px;
 }
@@ -1413,10 +1409,6 @@ select{
   top: -8.8px;
 }
 
-.top-\[0\]{
-  top: 0;
-}
-
 .top-\[100\%\]{
   top: 100%;
 }
@@ -1443,6 +1435,18 @@ select{
 
 .top-\[calc\(100\%\+6px\)\]{
   top: calc(100% + 6px);
+}
+
+.\!top-\[5px\]{
+  top: 5px !important;
+}
+
+.right-\[10px\]{
+  right: 10px;
+}
+
+.top-\[0\]{
+  top: 0;
 }
 
 .z-0{
@@ -1833,16 +1837,20 @@ select{
   margin-right: 0.25rem;
 }
 
+.mr-10{
+  margin-right: 2.5rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
 
-.mr-5{
-  margin-right: 1.25rem;
+.mr-4{
+  margin-right: 1rem;
 }
 
-.mr-8{
-  margin-right: 2rem;
+.mr-5{
+  margin-right: 1.25rem;
 }
 
 .mr-\[-35px\]{
@@ -2069,14 +2077,6 @@ select{
   margin-top: auto;
 }
 
-.mr-4{
-  margin-right: 1rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
-}
-
 .block{
   display: block;
 }
@@ -2137,10 +2137,6 @@ select{
   height: 100dvh;
 }
 
-.h-\[103px\]{
-  height: 103px;
-}
-
 .h-\[116px\]{
   height: 116px;
 }
@@ -2187,10 +2183,6 @@ select{
 
 .h-\[22\.4px\]{
   height: 22.4px;
-}
-
-.h-\[220px\]{
-  height: 220px;
 }
 
 .h-\[240px\]{
@@ -2409,24 +2401,24 @@ select{
   height: 100%;
 }
 
-.h-\[426px\]{
-  height: 426px;
+.h-\[103px\]{
+  height: 103px;
+}
+
+.h-\[220px\]{
+  height: 220px;
+}
+
+.h-\[290px\]{
+  height: 290px;
 }
 
 .h-\[380px\]{
   height: 380px;
 }
 
-.h-\[305px\]{
-  height: 305px;
-}
-
-.h-\[350px\]{
-  height: 350px;
-}
-
-.h-\[290px\]{
-  height: 290px;
+.h-\[20px\]{
+  height: 20px;
 }
 
 .max-h-80{
@@ -2463,6 +2455,10 @@ select{
 
 .min-h-\[56px\]{
   min-height: 56px;
+}
+
+.min-h-\[20px\]{
+  min-height: 20px;
 }
 
 .w-10{
@@ -2515,10 +2511,6 @@ select{
 
 .w-\[1px\]{
   width: 1px;
-}
-
-.w-\[200px\]{
-  width: 200px;
 }
 
 .w-\[240px\]{
@@ -2609,6 +2601,10 @@ select{
   width: 4px;
 }
 
+.w-\[500px\]{
+  width: 500px;
+}
+
 .w-\[58px\]{
   width: 58px;
 }
@@ -2673,8 +2669,12 @@ select{
   width: 100%;
 }
 
-.w-\[500px\]{
-  width: 500px;
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[20px\]{
+  width: 20px;
 }
 
 .min-w-10{
@@ -2751,6 +2751,10 @@ select{
 
 .min-w-full{
   min-width: 100%;
+}
+
+.min-w-\[20px\]{
+  min-width: 20px;
 }
 
 .max-w-5{
@@ -2873,10 +2877,6 @@ select{
   max-width: 544px;
 }
 
-.max-w-\[550px\]{
-  max-width: 550px;
-}
-
 .max-w-\[560px\]{
   max-width: 560px;
 }
@@ -2925,6 +2925,10 @@ select{
   max-width: 28rem;
 }
 
+.max-w-\[550px\]{
+  max-width: 550px;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -2937,8 +2941,8 @@ select{
   flex-grow: 1;
 }
 
-.grow{
-  flex-grow: 1;
+.border-collapse{
+  border-collapse: collapse;
 }
 
 .-translate-x-full{
@@ -3341,10 +3345,6 @@ select{
 
 .rounded-md{
   border-radius: 0.375rem;
-}
-
-.rounded-\[16\]{
-  border-radius: 16;
 }
 
 .border{
@@ -3938,10 +3938,6 @@ select{
   padding-bottom: 2.5rem;
 }
 
-.pb-12{
-  padding-bottom: 3rem;
-}
-
 .pb-3{
   padding-bottom: 0.75rem;
 }
@@ -4054,10 +4050,6 @@ select{
   padding-top: 2.5rem;
 }
 
-.pt-4{
-  padding-top: 1rem;
-}
-
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -4082,12 +4074,16 @@ select{
   padding-top: 64px;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
+.pb-12{
+  padding-bottom: 3rem;
 }
 
 .pt-3{
   padding-top: 0.75rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
 }
 
 .text-center{
@@ -4198,10 +4194,6 @@ select{
   font-size: 42px;
 }
 
-.text-\[45px\]{
-  font-size: 45px;
-}
-
 .text-\[48px\]{
   font-size: 48px;
 }
@@ -4225,6 +4217,18 @@ select{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[45px\]{
+  font-size: 45px;
+}
+
+.text-\[10px\]{
+  font-size: 10px;
+}
+
+.text-\[11px\]{
+  font-size: 11px;
 }
 
 .font-bold{
@@ -5012,10 +5016,6 @@ select{
     margin-bottom: -36px;
   }
 
-  .max-\[1024px\]\:mb-\[10px\]{
-    margin-bottom: 10px;
-  }
-
   .max-\[1024px\]\:mb-\[24px\]{
     margin-bottom: 24px;
   }
@@ -5038,6 +5038,10 @@ select{
 
   .max-\[1024px\]\:mt-\[auto\]{
     margin-top: auto;
+  }
+
+  .max-\[1024px\]\:mb-\[10px\]{
+    margin-bottom: 10px;
   }
 
   .max-\[1024px\]\:flex{
@@ -5210,16 +5214,20 @@ select{
     height: 65vw;
   }
 
+  .max-\[767px\]\:h-\[40px\]{
+    height: 40px;
+  }
+
   .max-\[767px\]\:min-h-\[490px\]{
     min-height: 490px;
   }
 
-  .max-\[767px\]\:w-\[310px\]{
-    width: 310px;
-  }
-
   .max-\[767px\]\:w-\[60vw\]{
     width: 60vw;
+  }
+
+  .max-\[767px\]\:w-\[310px\]{
+    width: 310px;
   }
 
   .max-\[767px\]\:max-w-\[300px\]{
@@ -5284,10 +5292,6 @@ select{
     font-size: 15px;
   }
 
-  .max-\[767px\]\:text-\[16px\]{
-    font-size: 16px;
-  }
-
   .max-\[767px\]\:text-\[18px\]{
     font-size: 18px;
   }
@@ -5302,6 +5306,10 @@ select{
 
   .max-\[767px\]\:text-\[32px\]{
     font-size: 32px;
+  }
+
+  .max-\[767px\]\:text-\[16px\]{
+    font-size: 16px;
   }
 }
 
@@ -5701,6 +5709,26 @@ select{
   }
 }
 
+@media (max-width: 400px){
+  .max-\[400px\]\:h-\[40px\]{
+    height: 40px;
+  }
+
+  .max-\[400px\]\:p-\[40px\]{
+    padding: 40px;
+  }
+
+  .max-\[400px\]\:px-\[40px\]{
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .max-\[400px\]\:px-\[10px\]{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 @media (max-width: 288px){
   .max-\[288px\]\:text-\[9\.6px\]{
     font-size: 9.6px;
@@ -5762,20 +5790,20 @@ select{
     display: none;
   }
 
-  .sm\:h-\[150px\]{
-    height: 150px;
-  }
-
-  .sm\:h-\[280px\]{
-    height: 280px;
-  }
-
   .sm\:h-\[45px\]{
     height: 45px;
   }
 
   .sm\:h-\[570px\]{
     height: 570px;
+  }
+
+  .sm\:h-\[150px\]{
+    height: 150px;
+  }
+
+  .sm\:h-\[280px\]{
+    height: 280px;
   }
 
   .sm\:h-\[378px\]{
@@ -5855,6 +5883,10 @@ select{
     font-size: 44px;
   }
 
+  .sm\:text-\[13px\]{
+    font-size: 13px;
+  }
+
   .sm\:leading-\[24px\]{
     line-height: 24px;
   }
@@ -5917,16 +5949,16 @@ select{
     margin-bottom: 49px;
   }
 
-  .md\:mb-\[60px\]{
-    margin-bottom: 60px;
-  }
-
   .md\:mt-\[-75px\]{
     margin-top: -75px;
   }
 
   .md\:mt-\[70px\]{
     margin-top: 70px;
+  }
+
+  .md\:mb-\[60px\]{
+    margin-bottom: 60px;
   }
 
   .md\:block{
@@ -6170,14 +6202,6 @@ select{
 }
 
 @media (min-width: 1250px){
-  .min-\[1250px\]\:ml-\[-35px\]{
-    margin-left: -35px;
-  }
-
-  .min-\[1250px\]\:mr-\[-35px\]{
-    margin-right: -35px;
-  }
-
   .min-\[1250px\]\:ml-\[-25px\]{
     margin-left: -25px;
   }
@@ -6280,12 +6304,12 @@ select{
 }
 
 @media (min-width: 1328px){
-  .min-\[1328px\]\:mr-9{
-    margin-right: 2.25rem;
-  }
-
   .min-\[1328px\]\:mr-4{
     margin-right: 1rem;
+  }
+
+  .min-\[1328px\]\:mr-9{
+    margin-right: 2.25rem;
   }
 
   .min-\[1328px\]\:w-\[486px\]{
@@ -6300,6 +6324,12 @@ select{
 
   .min-\[1433px\]\:hidden{
     display: none;
+  }
+}
+
+@media (min-width: 1440px){
+  .min-\[1440px\]\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
