--- a/components/product-card.html
+++ b/components/product-card.html
@@ -71,7 +71,7 @@
       <h4 class="text-[20px] font-semibold hidden md:block">3 200 ₽</h4>
       <button
           class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 max-[400px]:px-[10px]!">
-        <span class="hidden sm:inline-block text-white text-[14px]">В корзину</span>
+        <!-- <span class="hidden sm:inline-block text-white text-[14px]">В корзину</span> -->
         <img src="img/icons/basket-white.svg" alt="" width="20" height="20" class="min-w-[20px] min-h-[20px]">
       </button>
 
