--- a/css/output.css
+++ b/css/output.css
@@ -1561,6 +1561,11 @@ select{
   margin-bottom: 1rem;
 }
 
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .my-\[10px\]{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -1589,11 +1594,6 @@ select{
 .my-\[6px\]{
   margin-top: 6px;
   margin-bottom: 6px;
-}
-
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 .mb-1{
@@ -2596,6 +2596,10 @@ select{
   min-width: 264px;
 }
 
+.min-w-\[380px\]{
+  min-width: 380px;
+}
+
 .min-w-\[4\.8px\]{
   min-width: 4.8px;
 }
@@ -2614,22 +2618,6 @@ select{
 
 .min-w-full{
   min-width: 100%;
-}
-
-.min-w-\[400px\]{
-  min-width: 400px;
-}
-
-.min-w-\[\]{
-  min-width: ;
-}
-
-.min-w-\[350px\]{
-  min-width: 350px;
-}
-
-.min-w-\[380px\]{
-  min-width: 380px;
 }
 
 .max-w-5{
@@ -3652,6 +3640,11 @@ select{
   padding-right: 95px;
 }
 
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -3750,16 +3743,6 @@ select{
 .py-\[8px\]{
   padding-top: 8px;
   padding-bottom: 8px;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .pb-10{
@@ -5944,30 +5927,6 @@ select{
     left: 489px;
   }
 
-  .xl\:col-span-5{
-    grid-column: span 5 / span 5;
-  }
-
-  .xl\:col-span-7{
-    grid-column: span 7 / span 7;
-  }
-
-  .xl\:col-span-6{
-    grid-column: span 6 / span 6;
-  }
-
-  .xl\:col-span-3{
-    grid-column: span 3 / span 3;
-  }
-
-  .xl\:col-span-8{
-    grid-column: span 8 / span 8;
-  }
-
-  .xl\:col-span-9{
-    grid-column: span 9 / span 9;
-  }
-
   .xl\:mt-\[-90px\]{
     margin-top: -90px;
   }
@@ -5994,6 +5953,10 @@ select{
 
   .xl\:w-\[calc\(100\%-480px\)\]{
     width: calc(100% - 480px);
+  }
+
+  .xl\:max-w-\[380px\]{
+    max-width: 380px;
   }
 
   .xl\:grid-cols-2{
